...
          selectedRange={selectedRange}
        />
      </ScrollView>

      <View style={[styles.bottomBar, { paddingBottom: insets.bottom }]}>
        {/*{isBooked && (
          <Text style={styles.bookingConfirmedText}>Booking confirmed!</Text>
        )}*/}
        {bookingError && (
          <Text style={styles.bookingErrorText}>{bookingError.message}</Text>
        )}
        <Pressable
          testID="book-button"
          disabled={!selectedRange.start || !selectedRange.end || isBooking}
          onPress={handleBooking}
          style={({ pressed }) => [
            styles.bookButton,
            (!selectedRange.start || !selectedRange.end || isBooking) &&
              styles.bookButtonDisabled,
...
